# sparling

./: .gitignore  .pylintrc  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yaml
docs/: conf.py  index.rst
docs/api/: baselines.rst  sparsity_layers.rst  sparsity_update.rst
sparling/: __init__.py  sparsity.py  sparsity_update.py
tests/: test_sparsity.py  test_sparsity_updater.py
