[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sparling"
version = "0.1.0"
description = "Sparsity enforcement and adaptive sparsity update utilities for neural networks"
requires-python = ">=3.9"
dependencies = [
    "torch",
    "numpy",
    "dconstruct",
]

[project.optional-dependencies]
test = ["pytest"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
