[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sparling"
version = "0.3.0"
description = "Sparsity enforcement and adaptive sparsity update utilities for neural networks"
readme = "README.md"
authors = [{name = "Kavi Gupta", email = "sparling@kavigupta.org"}]
requires-python = ">=3.9"
dependencies = [
    "torch",
    "numpy",
    "dconstruct",
]

[project.optional-dependencies]
test = ["pytest"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
